--- a/chapter4.tex
+++ b/chapter4.tex
@@ -886,3 +886,50 @@ ds^2 &= \frac{dy^k dy^k}{\left(1+\frac{K}{4}y^ky^k\right)^2}
 \end{align}
 $$\blacklozenge$$
 \newpage
+
+\section{p140 - Exercise 5}
+\begin{tcolorbox}
+Show that in a flat $V_n$ the straight line joining any two points of a $P$-flat $(P>N)$ lies entirely in the P-flat.
+\end{tcolorbox}
+For a $P$-flat we have by an appropriate re indexing of the variables $z_k$
+\begin{align}
+A_{mp}z_p+B_p =0 \spatie m=1,\dots,P
+\end{align}
+A straight line has as equation $z_p=C_p u + D_p$. As we have two points in the $P$-flat we have two $u_1, u_2$ for which yields
+\begin{align}
+&\left\{ \begin{array}{ll}
+A_{mp}\left(C_p u_1 + D_p\right) +B_p =0&\\
+ & \spatie m=1,\dots,P\\
+A_{mp}\left(C_p u_2 + D_p\right) +B_p =0& 
+\end{array}\right.
+\end{align} 
+Subtracting the corresponding equations in $m$ for the two sets $u_1, u_2$ gives 
+\begin{align}
+&A_{mp}C_p\left( u_1-u_0 \right) =0&\\
+\Rightarrow\spatie &A_{mp}C_p=0\spatie &\text{ for }m=1,\dots,P\\
+\text{(4) in (2) }\Rightarrow\spatie &A_{mp}D_p +B_p =0 \spatie &\text{ for }m=1,\dots,P
+\end{align} 
+So for an arbitrary $u$ we get from (1),(4) and (5)
+\begin{align}
+A_{mp}\left(C_p u + D_p\right) +B_p = \underbrace{A_{mp}C_p}_{=0} u + \underbrace{A_{mp}D_p +B_p}_{=0} \spatie &\text{ for }m=1,\dots,P
+\end{align}
+\begin{align}
+\Rightarrow\spatie A_{mp}\left(\underbrace{C_p u + D_p}_{z_p}\right) +B_p =0 \spatie &\text{ for }m=1,\dots,P
+\end{align}
+So the points $z_p$ lying on the line satisfy the conditions for the  $P$-flat and lie therefore in the  $P$-flat.
+$$\blacklozenge$$
+\newpage
+
+\section{p140 - Exercise 6}
+\begin{tcolorbox}
+Show that in four dimensions the transformation$$\begin{array}{l}
+z^{'}_1 = z_1\cosh \phi + i z_4\sinh \phi\\
+z^{'}_2 = z_2\\
+z^{'}_3 = z_3\\
+z^{'}_4 = -iz_1\sinh \phi +  z_4\cosh \phi
+\end{array}$$
+is orthogonal, $\phi$ being any constant. Putting $z_1=x,\ z_2 =y, \ z_3 = z, \ z_4 = ict, \ \phi = \frac{v}{c}$, obtain the transformation connecting $(x^{'},y^{'},z^{'},t^{'})$ and $(x^{},y^{},z^{},t^{})$. This is the $\mathit{Lorentz \ transformation} $ of the special theory of relativity.
+\end{tcolorbox}
+
+$$\blacklozenge$$
+\newpage
