--- a/chapter4.tex
+++ b/chapter4.tex
@@ -802,8 +802,8 @@ R_{33} = -2\sin^2\left(\frac{r}{R}\right)\sin^2\theta\\\\
 hence
 \begin{align}
 \mathfrak{R}&=a^{11}R_{11}+a^{22}R_{22}+a^{33}R_{33}\\
-\Rightarrow\spatie R&= -\frac{2}{R^2}-2\frac{\sin^2\left(\frac{r}{R}\right)}{R^2\sin^2\left(\frac{r}{R}\right)}-2\frac{\sin^2\left(\frac{r}{R}\right)\sin^2\theta}{R^2\sin^2\left(\frac{r}{R}\right)\sin^2\theta }\\
-\mathfrak{R}&= -\frac{6}{R^2}
+\Rightarrow\spatie \mathfrak{R}&= -\frac{2}{R^2}-2\frac{\sin^2\left(\frac{r}{R}\right)}{R^2\sin^2\left(\frac{r}{R}\right)}-2\frac{\sin^2\left(\frac{r}{R}\right)\sin^2\theta}{R^2\sin^2\left(\frac{r}{R}\right)\sin^2\theta }\\
+&= -\frac{6}{R^2}
 \end{align}
 The equations in (40) and (43) are indeed in accordance with $\mathbf{4.115}$ .
 $$\blacklozenge$$
@@ -873,8 +873,8 @@ d\hat{s}^2 &= \hat{\eta}^2+\left|\tau(P+dP)\tau(N)\right|^2\\
 It is easy to see that $d \hat{s}^2 =  dy^k dy^k$ and also
 \begin{align}
 \cos^4(\half r \sqrt{K}) &= \left(\cos^2(\half r \sqrt{K})\right)^2\\
-\Leftrightarrow\spatie  &= \left(\frac{\cos^2(\half r \sqrt{K})}{\cos^2(\half r \sqrt{K})+\sin^2(\half r  \sqrt{K})}\right)^2\\
-\Leftrightarrow\spatie &= \left(\frac{1}{1+\tan^2(\half r  \sqrt{K})}\right)^2
+ &= \left(\frac{\cos^2(\half r \sqrt{K})}{\cos^2(\half r \sqrt{K})+\sin^2(\half r  \sqrt{K})}\right)^2\\
+&= \left(\frac{1}{1+\tan^2(\half r  \sqrt{K})}\right)^2
 \end{align}
 We note that $\frac{2}{\sqrt{K}}\tan(\half r  \sqrt{K})$ is the size of the vector $\left|O\tau(P)\right|$ and can express this as (as we use local Cartesian coordinates at the origin) $\left|O\tau(P)\right|^2 = y^ky^k$ and thus $\tan^2(\half r  \sqrt{K}) =\frac{K}{4}y^ky^k$. Combining this with (14) and (17) gives:
 \begin{align}
@@ -1078,7 +1078,7 @@ F_{mn,r}+F_{nr,m}+F_{rm,n}&=\left\{\begin{array}{l}
 \end{array}\right.
 \end{align}
 
-Multiplying (5) with $\epsilon_{mnrt}$ 
+Multiplying (2) with $\epsilon_{mnrt}$ 
 \begin{align}
 \left(F_{mn,r}+F_{nr,m}+F_{rm,n}\right)\epsilon_{mnrt}&=\left\{\begin{array}{l}
 \ \epsilon_{mnks} \epsilon_{mnrt} Z_{ks,r}\\\\
