--- a/main.tex
+++ b/main.tex
@@ -121,9 +121,9 @@ m n\\
 
 \tableofcontents
 \listoffigures
-%\include{chapter1}
-%\include{chapter2}
-%\include{chapter3}
+\include{chapter1}
+\include{chapter2}
+\include{chapter3}
 \include{chapter4}
 %\include{chapter5}
 \printbibliography %Prints bibliography
